# prodscraper

./: .gitignore  README.md
.github/workflows/: ci.yml
json_to_csv_processor/: .flake8  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
json_to_csv_processor/docs/: api.md  architecture.md  configuration.md
json_to_csv_processor/tests/: test_product_processor.py
jumbo_scraper/: .env.example  Dockerfile  Makefile  README.md  config.py  dump.rdb  fly.toml  main.py  models.py  prometheus_metrics.py  pyproject.toml  requirements.txt  scraper.py
jumbo_scraper/src/: main.py
jumbo_scraper/src/api/: endpoints.py
jumbo_scraper/src/core/: __init__.py  config.py  security.py
jumbo_scraper/src/models/: __init__.py  product.py
jumbo_scraper/src/services/: __init__.py  prometheus_metrics.py  scraper.py
jumbo_scraper/src/utils/: __init__.py  redis_helper.py
jumbo_scraper/tests/: test_main.py
